Replaced the contact form with about us

--- a/src/index.html
+++ b/src/index.html
@@ -88,25 +88,18 @@
 
                 </section>
 
-                <section id="contact">
+                <section id="information">
                 
-                    <div class="form">
-                        <h1>Let's get in touch!</h1>
-                        <form method="post" action="contact.php">
-                            <label for="form_name">Tell us your name</label>
-                            <input id="form_name" type="text" name="name" required />
-                            <label for="form_contact">How can we contact you? (phone, email or both)</label>
-                            <input id="form_contact" type="text" name="contact" />
-                            <label for="form_question">Ask us anything, or just say hello (optional)</label>
-                            <textarea id="form_question" name="question"></textarea>
-                            <input type="hidden" name="channel" value="direct" />
-                            <submit-button class="button">Submit</submit-button>
-                        </form>
+                    <div class="about">
+                        <h1>About us</h1>
+                        <p>Hi there! Masking Technology is an open software development company focussed on future-proofing software.</p>
+                        <p>We know from experience that building maintainable applications that scale well is very hard.</p>
+                        <p>That's why we've made it our mission to help other companies easy the pain.</p>
                     </div>
 
                     <hr>
 
-                    <div class="information">
+                    <div class="contact">
                         <h1>Contact information</h1>
                         <div class="options">
                             <div class="option location">
