--- a/src/talks/index.html
+++ b/src/talks/index.html
@@ -26,6 +26,11 @@
                     From Waterfall To Agile And Beyond
                 </a>
             </li>
+            <li>
+                <a href="Stop_Building_APIs.pdf" target="_blank">
+                    Stop Building APIs
+                </a>
+            </li>
         </ul>
 
     </body>
