Final draft of the new format

--- a/src/projects.html
+++ b/src/projects.html
@@ -32,7 +32,7 @@
                         </div>
                         <p>Jitar is a distributed runtime for scaling monolithic full-stack JavaScript and TypeScript applications.</p>
                         <p>Its goal is to create adaptable applications that can evolve from monolithic to microservices seamlessly, with configuration changes only.</p>
-                        <a href="https://github.com/MaskingTechnology/jitar" class="button" target="_blank" aria-label="Visit our Jitar page">Go to Jitar</a>
+                        <a href="https://github.com/MaskingTechnology/jitar" class="button project" target="_blank" aria-label="Visit our Jitar page">Go to Jitar</a>
                     </article>
 
                     <article class="project">
@@ -42,7 +42,7 @@
                         </div>
                         <p>Comify is a social media platform that uses comics as the primary form of communication.</p>
                         <p>Its intent is to learn and improve building future-proofed applications and serves as a demo project for Jitar.</p>
-                        <a href="https://github.com/MaskingTechnology/comify" class="button" target="_blank" aria-label="Visit our Comify page">Go to Comify</a>
+                        <a href="https://github.com/MaskingTechnology/comify" class="button project" target="_blank" aria-label="Visit our Comify page">Go to Comify</a>
                     </article>
                     
             </section>
