--- a/src/talks.html
+++ b/src/talks.html
@@ -28,6 +28,15 @@
                     <article class="talk">
                         <div class="subject">
                             <img src="/images/sessionize.svg" alt="Sessionize" />
+                            <h1>Architectural Uncertainty? Build Schrödinger's App!</h1>
+                        </div>
+                        <p>Explore how decoupling development and deployment models allows just-in-time deployment of an application in multiple forms without any code changes, featuring live demos.</p>
+                        <a href="/downloads/Architectural_Uncertainty_Build_Schrodingers_App.pdf" class="button talk" target="_blank" aria-label="Download the presentation 'How To Build Future-Proofed Applications'">Download slides</a>
+                    </article>
+
+                    <article class="talk">
+                        <div class="subject">
+                            <img src="/images/sessionize.svg" alt="Sessionize" />
                             <h1>How To Build Future-Proofed Applications</h1>
                         </div>
                         <p>Dive into five rules of thumb that enable effective change implementation across the entire software development lifecycle, ultimately enhancing application development cost-efficiency.</p>
