Added consultancy and training section

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,30 @@
                     <h2>By future-proofing the development life cycle and technology.</h2>
                 </section>
 
+                <section id="services" class="tiles large">
+
+                    <article class="service">
+                        <div class="subject">
+                            <img src="/images/consultancy.svg" alt="Service" />
+                            <h1>Consultancy</h1>
+                        </div>
+                        <p>Is your development process slowing down, and do you need a push to accelerate again?</p>
+                        <p>We are ready to collaborate closely with you to analyze, refine, and optimize every phase of your development cycle.</p>
+                        <a href="/consultancy" class="button service" aria-label="View our consultancy services">More information</a>
+                    </article>
+
+                    <article class="service">
+                        <div class="subject">
+                            <img src="/images/training.svg" alt="Training" />
+                            <h1>Training</h1>
+                        </div>
+                        <p>Do you want to elevate your own skills or your team's with the latest industry developments?</p>
+                        <p>We offer both off-the-shelf and tailored training options covering the development process, architecture, and more.</p>
+                        <a href="/training" class="button service" aria-label="View our training options">More information</a>
+                    </article>
+                    
+                </section>
+
                 <section id="activities" class="tiles small">
 
                     <article>
@@ -57,11 +81,10 @@
                 <section id="information">
                 
                     <div class="about">
-                        <h1>How can we help?</h1>
-                        <p>We excel in transforming your software development life cycle to achieve optimal efficiency and cost savings.</p>
-                        <p>Over the past years, we have gained deep industry knowledge and developed innovative methodologies, forming a strong foundation for our services.</p>
-                        <p>Our experts are ready to collaborate closely to analyze, refine, and enhance each phase of your development cycle.</p>
-                        <p><a href="/services" class="button service" aria-label="View our services">View services</a></p>
+                        <h1>About us</h1>
+                        <p>We help organizations overcome the challenges of modern software development. Our focus is on adding value and reducing costs, from the initial requirements phase through to maintenance.</p>
+                        <p>To achieve this, we use future-proofing techniques to build software that can continuously grow and adapt effectively and efficiently.</p>
+                        <p>As an open company, we share our knowledge through writing articles, speaking at conferences, and launching open-source projects.</p>
                     </div>
 
                     <hr>
