--- a/src/talks.html
+++ b/src/talks.html
@@ -6,7 +6,7 @@
         
     {% include "meta.html" %}
 
-    <title>Masking Technology - Future-proofing software applications</title>
+    <title>Masking Technology - Talks</title>
 
 </head>
 
