--- a/src/articles.html
+++ b/src/articles.html
@@ -6,7 +6,7 @@
         
     {% include "meta.html" %}
 
-    <title>Masking Technology - Future-proofing software applications</title>
+    <title>Masking Technology - Articles</title>
 
 </head>
 
