--- a/src/talks.html
+++ b/src/talks.html
@@ -28,10 +28,19 @@
                     <article class="talk">
                         <div class="subject">
                             <img src="/images/sessionize.svg" alt="Sessionize" />
+                            <h1>Making Apps More Resilient By Applying Darwinism</h1>
+                        </div>
+                        <p>Explore how Darwin's theory of natural selection can be applied to software development to create applications that can adapt to change without breaking or failing, featuring a working prototype.</p>
+                        <a href="/downloads/Making_Apps_More_Resilient_By_Applying_Darwinism.pdf" class="button talk" target="_blank" aria-label="Download the presentation 'Making Apps More Resilient By Applying Darwinism'">Download slides</a>
+                    </article>
+
+                    <article class="talk">
+                        <div class="subject">
+                            <img src="/images/sessionize.svg" alt="Sessionize" />
                             <h1>Architectural Uncertainty? Build Schrödinger's App!</h1>
                         </div>
                         <p>Explore how decoupling development and deployment models allows just-in-time deployment of an application in multiple forms without any code changes, featuring live demos.</p>
-                        <a href="/downloads/Architectural_Uncertainty_Build_Schrodingers_App.pdf" class="button talk" target="_blank" aria-label="Download the presentation 'How To Build Future-Proofed Applications'">Download slides</a>
+                        <a href="/downloads/Architectural_Uncertainty_Build_Schrodingers_App.pdf" class="button talk" target="_blank" aria-label="Download the presentation 'Architectural Uncertainty? Build Schrödinger's App!'">Download slides</a>
                     </article>
 
                     <article class="talk">
